# hireIQ

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_03_22_0001_enable_pgvector.py  2026_03_22_0002_phase2_core_schema.py  2026_03_22_0003_phase3_vector_indexes.py  2026_03_22_0004_phase6_integrations.py  2026_03_22_0005_phase7_performance_indexes.py  2026_03_24_0006_agent_run_fallback_flag.py  2026_03_24_0007_candidate_company_scope.py  2026_03_24_0008_job_updated_at.py  __init__.py
backend/app/: main.py
backend/app/agents/: __init__.py  crewai_runner.py  orchestrator.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  agent_run.py  application.py  ats_webhook_event.py  candidate.py  company.py  job.py  user.py
backend/app/rag/: __init__.py  embeddings.py  parser.py
backend/app/schemas/: __init__.py  application.py  auth.py  candidate.py  common.py  dashboard.py  integration.py  job.py  meta.py
backend/app/services/: applications.py  ats_webhooks.py  auth.py  calendar.py  candidates.py  dashboard.py  email.py  jobs.py  (+4 more)
backend/scripts/: README.md  seed_demo_company.py
backend/tests/: conftest.py  test_phase2_api.py  test_phase3_rag.py  test_phase4_orchestration.py  test_phase6_integrations.py  test_phase7_services.py
(+58 files in other folders)
